footer mobile screen overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,8 +50,11 @@ body {
     margin-bottom: 110px;
 }
 @media screen and (min-width: 1440px){
-    body{
-    font-size: 2rem;
+    h1{
+        font-size: 4rem !important;
+    }
+    h2.lead{
+        font-size: 2rem
     }
 }
 
@@ -93,7 +96,6 @@ a:active,
 a:focus,
 a:active:focus {
     text-decoration: none;
-    color: var(--clr-secondary);
 }
 
 /*
@@ -374,9 +376,16 @@ Navbar
   bottom: 0;
   width: 100%;
   height: 110px;
-  font-size: 0.7em;
+  font-size: 0.5em;
   line-height: 1;
 }
+
+@media screen and (min-width: 768px){
+    .footer {
+        font-size: 0.7rem
+    }
+}
+
 
 
 .footer ul{
